# text-macro

./: README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
scripts/: create-macos-cert.sh
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/picker/: MacroPicker.css  MacroPicker.tsx
src/settings/: Settings.css  Settings.tsx
