[package]
name = "text-macro-tauri"
version = "1.0.2"
description = "TextMacro - cross-platform text macro app"
authors = ["sungwookang"]
edition = "2021"

[lib]
name = "text_macro_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
arboard = "3"
enigo = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
core-graphics = "0.23"
